<resources>
    <string name="app_name">Serviced</string>
    <string name="welcome_to_serviced">Welcome to serviced!</string>
    <string name="get_urgent_services_delivered_right_at_your_location_within_minutes">Get urgent services delivered right at your location within minutes.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="log_in">Log In</string>
    <string name="sign_up"> Sign Up</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot Password?</string>
    <string name="or_connect_using">Or connect using</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="create_your_serviced_account_for_a_better_experience">Create your serviced account for a better experience</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="create">CREATE</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="messages">messages</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_for_a_better_experience">Sign in for a better experience</string>
    <string name="search_hint">I am looking for…</string>
    <string name="provide_a_service">Provide a service</string>
    <string name="featured_categories">Featured categories</string>
    <string name="log_out">Log Out</string>
    <string name="contact_developer">Contact developer</string>
    <string name="rate_us">Rate us</string>
    <string name="report_bug">Report a bug</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="retailer_tag_line">We will help you grow your business using online services</string>
    <string name="how_we_work">How we work?</string>
    <string name="grow_your_business">Grow Your Business</string>
    <string name="remember_me">Remember me</string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_a_service_provider_account">Create a service\nprovider account</string>
    <string name="enter_one_time_password_sent_on">Enter one time password sent on</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="resend_code">Resend code</string>
    <string name="verify_code">Verify code</string>
    <string name="next">Next</string>
    <string name="individual">Individual</string>
    <string name="brand">Organization</string>
    <string name="brand_or_group_name">Brand, Company or Group name</string>
    <string name="txt_select">Select a category that best suits the service you offer</string>
    <string name="enter_your_skills_separated_by_a_comma">Tell us your top skills and main areas of expertise separated by a comma (,)</string>
    <string name="provider_description_hint">Relevant information about you and your business</string>
    <string name="available_countrywide">Available countrywide</string>
    <string name="select_the_days_of_the_week_that_you_are_available">Select days of the week that you are available</string>
    <string name="always_available">Always available</string>
    <string name="select_the_time_that_you_are_available">Select the times of the day you are available</string>
    <string name="title_location_permission">Location services needed</string>
    <string name="text_location_permission">Serviced needs to access your location for the best performance</string>
    <string name="ok">Ok</string>
    <string name="you_did_not_complete_your_registration">You did not complete your registration</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit, tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit, quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam recusandae alias error harum maxime adipisci amet laborum. Perspiciatis minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur fugiat, temporibus enim commodi iusto libero magni deleniti quod quam consequuntur! Commodi minima excepturi repudiandae velit hic maxime doloremque. Quaerat provident co</string>
    <string name="rating">Rating</string>
    <string name="reviews">Reviews</string>
    <string name="title_activity_user_map">Map</string>
    <string name="call">Request</string>
    <string name="message">Map</string>
    <string name="loading">Loading</string>
    <string name="infobip_application_code">b32a23b0ff9bbb2f20b401555fa5df6e-4b156636-7437-44f8-9e15-f40a26efdcbd</string>
    <string name="txt_see_all">see all</string>
    <string name="title_activity_categorized_provicers">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="request_task">Complete Order</string>
    <string name="jobs">Jobs</string>
    <string name="experience">Experience</string>

</resources>