<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:fontFamily="@font/crimson_text"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/drawer_categories"
            android:fontFamily="@font/crimson_text"
            android:icon="@drawable/ic_category_24"
            android:title="@string/categories" />

        <item
            android:id="@+id/drawer_add_service"
            android:fontFamily="@font/crimson_text"
            android:icon="@drawable/ic_add_circle_24"
            android:title="@string/provide_a_service" />


    </group>

    <item
        android:fontFamily="@font/crimson_text"
        android:title="@string/profile">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/drawer_log_in"
                    android:fontFamily="@font/crimson_text"
                    android:icon="@drawable/ic_baseline_vpn_key_24"
                    android:title="@string/log_in" />

                <item
                    android:id="@+id/drawer_account"
                    android:fontFamily="@font/crimson_text"
                    android:icon="@drawable/ic_baseline_account_circle_24"
                    android:title="@string/account" />

                <item
                    android:id="@+id/drawer_log_out"
                    android:fontFamily="@font/crimson_text"
                    android:icon="@drawable/ic_exit_24"
                    android:title="@string/log_out" />


            </group>

        </menu>

    </item>

    <item
        android:fontFamily="@font/crimson_text"
        android:title="@string/about">

        <menu>

            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/drawer_about_app"
                    android:fontFamily="@font/crimson_text"
                    android:icon="@drawable/ic_info_24"
                    android:title="@string/about" />

                <item
                    android:id="@+id/drawer_contact_dev"
                    android:fontFamily="@font/crimson_text"
                    android:icon="@drawable/ic_call_24"
                    android:title="@string/contact_developer" />

                <item
                    android:id="@+id/drawer_rate_app"
                    android:fontFamily="@font/crimson_text"
                    android:icon="@drawable/ic_rate_icon_24"
                    android:title="@string/rate_us" />

                <item
                    android:id="@+id/drawer_report_bug"
                    android:fontFamily="@font/crimson_text"
                    android:icon="@drawable/ic_bug_report_24"
                    android:title="@string/report_bug" />

            </group>

        </menu>

    </item>

</menu>