<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/home_card_bg"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_margin="30dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/crimson_text"
            android:text="let's get started"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/crimson_text"
            android:text="@string/create_your_serviced_account_for_a_better_experience"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_usrName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/bg_white_edit_text"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawableTint="@color/light_blue"
            android:fontFamily="@font/crimson_text"
            android:hint="@string/user_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/light_blue"
            android:textColorHint="@color/light_blue"
            tools:ignore="RtlSymmetry,UnusedAttribute" />


        <EditText
            android:id="@+id/edt_mailSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/bg_white_edit_text"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawableTint="@color/light_blue"
            android:fontFamily="@font/crimson_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/light_blue"
            android:textColorHint="@color/light_blue"
            tools:ignore="RtlSymmetry,UnusedAttribute" />

        <com.asdev.phoneedittext.PhoneEditText
            android:id="@+id/edt_phone_signUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_white_edit_text"
            android:drawableStart="@drawable/ic_phone_24"
            android:drawableTint="@color/light_blue"
            android:fontFamily="@font/crimson_text"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:textColorHint="@color/light_blue"
            tools:ignore="RtlSymmetry"
            tools:targetApi="m" />

        <EditText
            android:id="@+id/edt_password_signUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:background="@drawable/bg_white_edit_text"
            android:drawableStart="@drawable/ic_lock_24"
            android:drawableTint="@color/light_blue"
            android:fontFamily="@font/crimson_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/light_blue"
            android:textColorHint="@color/light_blue"
            tools:ignore="RtlSymmetry,UnusedAttribute" />


        <EditText
            android:id="@+id/edt_passwordConfirmation_signUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:background="@drawable/bg_white_edit_text"
            android:drawableStart="@drawable/ic_lock_24"
            android:drawableTint="@color/light_blue"
            android:fontFamily="@font/crimson_text"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/light_blue"
            android:textColorHint="@color/light_blue"
            tools:ignore="RtlSymmetry,UnusedAttribute" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#03A9F4"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="90dp" />

        <LinearLayout
            android:id="@+id/layout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:background="@android:color/transparent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_signUp"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/crimson_text"
                android:text="@string/login_here"
                android:textColor="@color/light_blue"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>