<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_card_bg"
    android:padding="30dp"
    tools:context=".Common.ProviderLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@android:color/transparent"
            android:src="@drawable/facebook_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/crimson_text"
            android:gravity="center"
            android:text="@string/grow_your_business"
            android:background="@android:color/transparent"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/crimson_text"
            android:gravity="center"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="callLogInScreen"
                android:backgroundTint="#FFEB3B"
                android:fontFamily="@font/crimson_text"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="20dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:onClick="callSignUpFirstActivity"
                android:backgroundTint="#FFEB3B"
                android:fontFamily="@font/crimson_text"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:backgroundTint="#FFEB3B"
            android:fontFamily="@font/crimson_text"
            android:text="@string/how_we_work"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>