<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_card_bg"
    android:scrollbars="none"
    android:padding="30dp"
    tools:context=".Common.RetailerLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/retailer_login_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/arrow_back"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/crimson_text"
            android:text="@string/log_in"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/provider_usrName_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/bg_white_edit_text"
                android:backgroundTint="#FFFFFF"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawableTint="@color/light_blue"
                android:fontFamily="@font/crimson_text"
                android:hint="@string/user_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/light_blue"
                android:textColorHint="@color/light_blue"
                app:layout_constraintBottom_toTopOf="@id/edt_mailSignUp"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="RtlSymmetry,UnusedAttribute" />

            <EditText
                android:id="@+id/provider_password_logIn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/bg_white_edit_text"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawableTint="@color/light_blue"
                android:fontFamily="@font/crimson_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:textColor="@color/light_blue"
                android:textColorHint="@color/light_blue"
                app:layout_constraintBottom_toTopOf="@id/edt_mailSignUp"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="RtlSymmetry,UnusedAttribute" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/transparent">

                <CheckBox
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/black"
                    android:fontFamily="@font/crimson_text"
                    android:text="@string/remember_me"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="3dp"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="@font/crimson_text"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:cornerRadius="20dp"
                    tools:ignore="RelativeOverlap" />


            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/crimson_text"
                android:text="@string/log_in"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/crimson_text"
                android:text="@string/create_an_account"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="20dp" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>